# telegram_dl

./: .gitattributes  .gitignore  LICENSE  Pipfile  README.md  alembic.ini  configuration.conf.TEMPLATE  nose2.cfg  pyproject.toml  pytelegram_dl_cli.py  telegram_dl_cli.py
notes/: SQL Snippets.md  TODO.md  aides notes.md  alembic notes.md  architecture notes.md  chat notes.md  code snippets.md  commands.md  configuration.conf.TEMPLATE  logging_configuration_TEMPLATE.json  message notes.md  phone number notes.md  photo notes.md  single dispatch notes.md  tdlib logging notes.md  text entity notes.md  unit test stuff.md  unit testing notes.md  updateUser notes.txt
pytelegram_dl/: application.py  constants.py  tdlib.py
telegram_dl/: application.py  config.py  constants.py  db_actions.py  db_model.py  db_model_enums.py  db_model_equality.py  handlers.py  input.py  tdlib.py  tdlib_generated.py  utils.py
telegram_dl/aides/: chat_aide.py  file_aide.py  message_aide.py  phone_number_aide.py  photo_set_aide.py  text_entity_aide.py  user_aide.py
telegram_dl/alembic/: alembic.ini  env.py  script.py.mako
telegram_dl/alembic/versions/: 047a6b389b38_2020-01-21_add_file_table.py  18e8fe8a7c2e_2020-05-12_add_text_entity_table.py  2a0538b361f0_2020-04-30_add_super_group_chat_table.py  2ed8f1a51ccf_2020-01-21_add_user_table.py  3326eb4a8333_2020-02-05_add_user_table.py  38cbc596f142_2020-04-30_add_chat_table.py  43624ee83d2f_2020-05-12_add_message_table.py  817cc7f1f793_2020-04-30_add_secret_chat_table.py  (+16 more)
telegram_dl/test/: test_cattr_converter.py  test_chat_aide.py  utilities.py
(+38 files in other folders)
